--- a/Python_assignment1_Osaro.ipynb
+++ b/Python_assignment1_Osaro.ipynb
@@ -441,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -452,8 +452,6 @@
       },
       "outputs": [],
       "source": [
-        "import pandas as pd\n",
-        "from itertools import combinations\n",
         "\n",
         "# quick helper to clean up values so small differences (spaces, case) don't matter\n",
         "def clean_val(x):\n",
@@ -486,7 +484,7 @@
         "\n",
         "def compare_rows(df, cutoff=0.7):\n",
         "    \"\"\"\n",
-        "    Goes through every pair of rows and compute the overlap coefficient.\n",
+        "    Go through every pair of rows and compute the overlap coefficient.\n",
         "    Keep only the pairs whose similarity is at least 'cutoff'.\n",
         "    Returns a DataFrame with the IDs, similarity score and a few context columns.\n",
         "    \"\"\"\n",
@@ -523,7 +521,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -603,7 +601,7 @@
               "1  Groningen  Groningen        NL        NL  "
             ]
           },
-          "execution_count": 11,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
