restarted kernel and emptied output cells

--- a/IDWR_assignment1.ipynb
+++ b/IDWR_assignment1.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "code",
    "metadata": {
-    "id": "hmOIHZNMps7O",
-    "ExecuteTime": {
-     "end_time": "2025-09-22T19:57:08.021431Z",
-     "start_time": "2025-09-22T19:57:08.004823Z"
-    }
+    "id": "hmOIHZNMps7O"
    },
    "source": [
     "from pathlib import Path\n",
@@ -19,16 +15,12 @@
     "db_path  = BASE_DIR / \"assignment1.db\"\n"
    ],
    "outputs": [],
-   "execution_count": 21
+   "execution_count": null
   },
   {
    "cell_type": "code",
    "metadata": {
-    "id": "kTYDO7Dmp5q9",
-    "ExecuteTime": {
-     "end_time": "2025-09-22T19:57:10.441840Z",
-     "start_time": "2025-09-22T19:57:10.414223Z"
-    }
+    "id": "kTYDO7Dmp5q9"
    },
    "source": [
     "# 1) Build (or rebuild) the database from the SQL script\n",
@@ -38,29 +30,12 @@
     "    # Execute the schema & sample data; enable foreign keys\n",
     "    con.executescript(\"PRAGMA foreign_keys=ON;\\n\" + sql_script)"
    ],
-   "outputs": [
-    {
-     "ename": "OperationalError",
-     "evalue": "table bill already exists",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mOperationalError\u001B[0m                          Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[22], line 6\u001B[0m\n\u001B[1;32m      4\u001B[0m     sql_script \u001B[38;5;241m=\u001B[39m f\u001B[38;5;241m.\u001B[39mread()\n\u001B[1;32m      5\u001B[0m \u001B[38;5;66;03m# Execute the schema & sample data; enable foreign keys\u001B[39;00m\n\u001B[0;32m----> 6\u001B[0m \u001B[43mcon\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mexecutescript\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mPRAGMA foreign_keys=ON;\u001B[39;49m\u001B[38;5;130;43;01m\\n\u001B[39;49;00m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;241;43m+\u001B[39;49m\u001B[43m \u001B[49m\u001B[43msql_script\u001B[49m\u001B[43m)\u001B[49m\n",
-      "\u001B[0;31mOperationalError\u001B[0m: table bill already exists"
-     ]
-    }
-   ],
-   "execution_count": 22
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-09-22T19:57:22.276577Z",
-     "start_time": "2025-09-22T19:57:22.262757Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "# 2) Quick sanity check\n",
     "with sqlite3.connect(db_path) as con:\n",
@@ -69,31 +44,13 @@
     "    )\n",
     "    print(\"Tables in database:\", tables)"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tables in database:                name\n",
-      "0              bill\n",
-      "1          customer\n",
-      "2           partner\n",
-      "3           segment\n",
-      "4       shareholder\n",
-      "5  customer_partner\n"
-     ]
-    }
-   ],
-   "execution_count": 23
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
    "metadata": {
-    "id": "GrNfeUWZqjxp",
-    "ExecuteTime": {
-     "end_time": "2025-09-22T19:57:24.019931Z",
-     "start_time": "2025-09-22T19:57:24.012167Z"
-    }
+    "id": "GrNfeUWZqjxp"
    },
    "source": [
     "# Example: list tables\n",
@@ -103,85 +60,12 @@
     "    )\n",
     "tables"
    ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "               name\n",
-       "0              bill\n",
-       "1          customer\n",
-       "2           partner\n",
-       "3           segment\n",
-       "4       shareholder\n",
-       "5  customer_partner"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>bill</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>customer</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>partner</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>segment</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>shareholder</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>customer_partner</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 24
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-09-22T19:57:26.198350Z",
-     "start_time": "2025-09-22T19:57:26.187869Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "query = \"\"\"\n",
     "SELECT c.customer_id,\n",
@@ -197,92 +81,13 @@
     "    total_contracts = pd.read_sql_query(query, con)\n",
     "total_contracts.head()\n"
    ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "  customer_id        address  total_contract_amount\n",
-       "0        C007  Grote Markt 9                  30000\n",
-       "1        C006   Oude Markt 3                  25000\n",
-       "2        C004  Langegracht 7                  22000\n",
-       "3        C003       Meent 12                  18000\n",
-       "4        C010      Damrak 78                  17000"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>customer_id</th>\n",
-       "      <th>address</th>\n",
-       "      <th>total_contract_amount</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>C007</td>\n",
-       "      <td>Grote Markt 9</td>\n",
-       "      <td>30000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>C006</td>\n",
-       "      <td>Oude Markt 3</td>\n",
-       "      <td>25000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>C004</td>\n",
-       "      <td>Langegracht 7</td>\n",
-       "      <td>22000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>C003</td>\n",
-       "      <td>Meent 12</td>\n",
-       "      <td>18000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>C010</td>\n",
-       "      <td>Damrak 78</td>\n",
-       "      <td>17000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 25
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
    "metadata": {
-    "id": "7HkxJZksqbmF",
-    "ExecuteTime": {
-     "end_time": "2025-09-22T19:57:28.337864Z",
-     "start_time": "2025-09-22T19:57:28.323906Z"
-    }
+    "id": "7HkxJZksqbmF"
    },
    "source": [
     "# Task 3B – Read the customer table into a pandas DataFrame\n",
@@ -292,183 +97,21 @@
     "# Preview the first few rows\n",
     "customer_df.head()\n"
    ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "  customer_id          street house_number       city country  age  salary  \\\n",
-       "0        C001      Vredenburg           10    Utrecht      NL   32    4200   \n",
-       "1        C002    Dapperstraat           22  Amsterdam      NL   29    3900   \n",
-       "2        C003           Meent           12  Rotterdam      NL   40    5200   \n",
-       "3        C004     Langegracht            7     Leiden      NL   35    4100   \n",
-       "4        C005  Stationsstraat           55   Den Haag      NL   27    3500   \n",
-       "\n",
-       "  nationality  \n",
-       "0       Dutch  \n",
-       "1       Dutch  \n",
-       "2       Dutch  \n",
-       "3       Dutch  \n",
-       "4       Dutch  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>customer_id</th>\n",
-       "      <th>street</th>\n",
-       "      <th>house_number</th>\n",
-       "      <th>city</th>\n",
-       "      <th>country</th>\n",
-       "      <th>age</th>\n",
-       "      <th>salary</th>\n",
-       "      <th>nationality</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>C001</td>\n",
-       "      <td>Vredenburg</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Utrecht</td>\n",
-       "      <td>NL</td>\n",
-       "      <td>32</td>\n",
-       "      <td>4200</td>\n",
-       "      <td>Dutch</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>C002</td>\n",
-       "      <td>Dapperstraat</td>\n",
-       "      <td>22</td>\n",
-       "      <td>Amsterdam</td>\n",
-       "      <td>NL</td>\n",
-       "      <td>29</td>\n",
-       "      <td>3900</td>\n",
-       "      <td>Dutch</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>C003</td>\n",
-       "      <td>Meent</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Rotterdam</td>\n",
-       "      <td>NL</td>\n",
-       "      <td>40</td>\n",
-       "      <td>5200</td>\n",
-       "      <td>Dutch</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>C004</td>\n",
-       "      <td>Langegracht</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Leiden</td>\n",
-       "      <td>NL</td>\n",
-       "      <td>35</td>\n",
-       "      <td>4100</td>\n",
-       "      <td>Dutch</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>C005</td>\n",
-       "      <td>Stationsstraat</td>\n",
-       "      <td>55</td>\n",
-       "      <td>Den Haag</td>\n",
-       "      <td>NL</td>\n",
-       "      <td>27</td>\n",
-       "      <td>3500</td>\n",
-       "      <td>Dutch</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 26
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
    "metadata": {
-    "id": "i_VSzDXAqyyw",
-    "ExecuteTime": {
-     "end_time": "2025-09-22T19:57:30.429440Z",
-     "start_time": "2025-09-22T19:57:30.406684Z"
-    }
+    "id": "i_VSzDXAqyyw"
    },
    "source": [
     "customer_df.info()       # column types & non-null counts\n",
     "customer_df.describe()   # numeric summary statistics\n",
     "customer_df['city'].value_counts()\n"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 22 entries, 0 to 21\n",
-      "Data columns (total 8 columns):\n",
-      " #   Column        Non-Null Count  Dtype \n",
-      "---  ------        --------------  ----- \n",
-      " 0   customer_id   22 non-null     object\n",
-      " 1   street        22 non-null     object\n",
-      " 2   house_number  22 non-null     object\n",
-      " 3   city          22 non-null     object\n",
-      " 4   country       22 non-null     object\n",
-      " 5   age           22 non-null     int64 \n",
-      " 6   salary        22 non-null     int64 \n",
-      " 7   nationality   22 non-null     object\n",
-      "dtypes: int64(2), object(6)\n",
-      "memory usage: 1.5+ KB\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "city\n",
-       "Amsterdam     4\n",
-       "Groningen     4\n",
-       "Utrecht       2\n",
-       "Rotterdam     2\n",
-       "Den Haag      2\n",
-       "Leiden        1\n",
-       "Enschede      1\n",
-       "Zwolle        1\n",
-       "Breda         1\n",
-       "Arnhem        1\n",
-       "Amersfoort    1\n",
-       "Hilversum     1\n",
-       "Deventer      1\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 27
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -478,11 +121,7 @@
      "height": 132
     },
     "id": "aQ9PABq3Xxk-",
-    "outputId": "76fb13b5-ddb5-4703-ee73-d6b090a5bb85",
-    "ExecuteTime": {
-     "end_time": "2025-09-22T19:57:48.629773Z",
-     "start_time": "2025-09-22T19:57:48.613942Z"
-    }
+    "outputId": "76fb13b5-ddb5-4703-ee73-d6b090a5bb85"
    },
    "source": [
     "# quick helper to clean up values so small differences (spaces, case) don't matter\n",
@@ -551,104 +190,17 @@
     "    return pd.DataFrame(hits).sort_values(\"similarity\", ascending=False).reset_index(drop=True)\n"
    ],
    "outputs": [],
-   "execution_count": 29
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-09-22T19:57:51.410695Z",
-     "start_time": "2025-09-22T19:57:51.382842Z"
-    }
-   },
+   "metadata": {},
    "source": [
     "similar_pairs = compare_rows(customer_df, cutoff=0.7)\n",
-    "similar_pairs.head()\n"
+    "similar_pairs.head()"
    ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "   id_1  id_2  similarity  street_1  street_2 house_number_1 house_number_2  \\\n",
-       "0  C020  C021       0.714  Vismarkt  Vismarkt              5              7   \n",
-       "1  C020  C022       0.714  Vismarkt  Vismarkt              5             12   \n",
-       "\n",
-       "      city_1     city_2 country_1 country_2  \n",
-       "0  Groningen  Groningen        NL        NL  \n",
-       "1  Groningen  Groningen        NL        NL  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id_1</th>\n",
-       "      <th>id_2</th>\n",
-       "      <th>similarity</th>\n",
-       "      <th>street_1</th>\n",
-       "      <th>street_2</th>\n",
-       "      <th>house_number_1</th>\n",
-       "      <th>house_number_2</th>\n",
-       "      <th>city_1</th>\n",
-       "      <th>city_2</th>\n",
-       "      <th>country_1</th>\n",
-       "      <th>country_2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>C020</td>\n",
-       "      <td>C021</td>\n",
-       "      <td>0.714</td>\n",
-       "      <td>Vismarkt</td>\n",
-       "      <td>Vismarkt</td>\n",
-       "      <td>5</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Groningen</td>\n",
-       "      <td>Groningen</td>\n",
-       "      <td>NL</td>\n",
-       "      <td>NL</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>C020</td>\n",
-       "      <td>C022</td>\n",
-       "      <td>0.714</td>\n",
-       "      <td>Vismarkt</td>\n",
-       "      <td>Vismarkt</td>\n",
-       "      <td>5</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Groningen</td>\n",
-       "      <td>Groningen</td>\n",
-       "      <td>NL</td>\n",
-       "      <td>NL</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 30
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
