created extra cell te separate loading the modules and setting up the path

--- a/IDWR_assignment1.ipynb
+++ b/IDWR_assignment1.ipynb
@@ -9,13 +9,21 @@
     "from pathlib import Path\n",
     "import sqlite3\n",
     "import pandas as pd\n",
-    "from itertools import combinations\n",
-    "BASE_DIR = Path().resolve()\n",
-    "sql_path = BASE_DIR / \"Assignment__1.sql\"\n",
-    "db_path  = BASE_DIR / \"assignment1.db\"\n"
+    "from itertools import combinations"
    ],
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "BASE_DIR = Path().resolve()\n",
+    "sql_path = BASE_DIR / \"Assignment__1.sql\"\n",
+    "db_path  = BASE_DIR / \"assignment1.db\""
+   ]
   },
   {
    "cell_type": "code",
