Task 2 part 2 added

--- a/Assignment 2/Task 3.ipynb
+++ b/Assignment 2/Task 3.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b47e12c5",
    "metadata": {},
    "outputs": [
@@ -47,9 +47,7 @@
     "\n",
     "# Copy the CSV directly into the working directory\n",
     "shutil.copy(os.path.join(path, \"diabetes.csv\"),\n",
-    "            os.path.join(working_dir, \"diabetes.csv\"))\n",
-    "\n",
-    "print(\"Dataset copied to:\", os.path.join(working_dir, \"diabetes.csv\"))\n"
+    "            os.path.join(working_dir, \"diabetes.csv\"))\n"
    ]
   },
   {
@@ -125,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "0dbf5927",
    "metadata": {},
    "outputs": [
@@ -133,25 +131,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max abs change in correlation: 0.332766\n",
+      "Max abs change in correlation: 0.333\n",
       "\n",
       "Top differences (absolute):\n",
-      "SkinThickness ↔ Insulin: Δ=-0.332766 |Δ|=0.332766\n",
-      "SkinThickness ↔ Age: Δ=0.249886 |Δ|=0.249886\n",
-      "Pregnancies ↔ SkinThickness: Δ=0.175844 |Δ|=0.175844\n",
-      "SkinThickness ↔ BMI: Δ=0.172869 |Δ|=0.172869\n",
-      "Glucose ↔ SkinThickness: Δ=0.163615 |Δ|=0.163615\n",
-      "BloodPressure ↔ Insulin: Δ=-0.137039 |Δ|=0.137039\n",
-      "BloodPressure ↔ Age: Δ=0.084911 |Δ|=0.084911\n",
-      "SkinThickness ↔ DiabetesPedigreeFunction: Δ=-0.081501 |Δ|=0.081501\n",
-      "Glucose ↔ BloodPressure: Δ=0.069828 |Δ|=0.069828\n",
-      "Pregnancies ↔ BloodPressure: Δ=0.067653 |Δ|=0.067653\n"
+      "SkinThickness ↔ Insulin: Δ=-0.333000 |Δ|=0.333000\n",
+      "SkinThickness ↔ Age: Δ=0.250000 |Δ|=0.250000\n",
+      "Pregnancies ↔ SkinThickness: Δ=0.176000 |Δ|=0.176000\n",
+      "SkinThickness ↔ BMI: Δ=0.173000 |Δ|=0.173000\n",
+      "Glucose ↔ SkinThickness: Δ=0.164000 |Δ|=0.164000\n",
+      "BloodPressure ↔ Insulin: Δ=-0.137000 |Δ|=0.137000\n",
+      "BloodPressure ↔ Age: Δ=0.085000 |Δ|=0.085000\n",
+      "SkinThickness ↔ DiabetesPedigreeFunction: Δ=-0.082000 |Δ|=0.082000\n",
+      "Glucose ↔ BloodPressure: Δ=0.070000 |Δ|=0.070000\n",
+      "Pregnancies ↔ BloodPressure: Δ=0.068000 |Δ|=0.068000\n"
      ]
     }
    ],
    "source": [
     "# Compare\n",
-    "diff = (corr_after - corr_before).round(6)\n",
+    "diff = (corr_after - corr_before).round(3)\n",
     "print(\"Max abs change in correlation:\", diff.abs().to_numpy().max())\n",
     "print(\"\\nTop differences (absolute):\")\n",
     "pairs = []\n",
