Update Task 2 Part 2.ipynb

--- a/Assignment 2/Task 2 Part 2.ipynb
+++ b/Assignment 2/Task 2 Part 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "29210e73",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "82e52786",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "2a0b5ed6",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "4686722e",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "6d1dd9b8",
    "metadata": {},
    "outputs": [],
@@ -61,24 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0aa4d147",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2616 records combined.\n",
-      "0    304586 the wasa2 object-oriented workflow mana...\n",
-      "1    304587 a user-centered interface for querying ...\n",
-      "2    304589 world wide database-integrating the web...\n",
-      "3    304590 xml-based information mediation with mi...\n",
-      "4    304582 the ccube constraint object-oriented da...\n",
-      "Name: merged, dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#4\n",
     "list_ACM = df_ACM[\"merged\"]\n",
@@ -89,43 +75,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "db523069",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Doc 0 vs Doc 1\n",
-      "  Jaccard (3-shingles): 0.1763\n",
-      "  MinHash estimate    : 0.2100\n",
-      "\n",
-      "Pairwise similarities (first N docs):\n",
-      "    doc_a  doc_b   jaccard  minhash\n",
-      "0       0      1  0.176334     0.15\n",
-      "1       0      2  0.181818     0.18\n",
-      "2       0      3  0.169388     0.16\n",
-      "3       0      4  0.220588     0.22\n",
-      "4       0      5  0.171657     0.23\n",
-      "5       0      6  0.237164     0.28\n",
-      "6       0      7  0.197436     0.22\n",
-      "7       0      8  0.143868     0.15\n",
-      "8       0      9  0.170792     0.20\n",
-      "9       1      2  0.218029     0.17\n",
-      "10      1      3  0.220126     0.19\n",
-      "11      1      4  0.204276     0.22\n",
-      "12      1      5  0.148362     0.13\n",
-      "13      1      6  0.181193     0.14\n",
-      "14      1      7  0.192982     0.16\n",
-      "15      1      8  0.100223     0.11\n",
-      "16      1      9  0.105505     0.09\n",
-      "17      2      3  0.191529     0.16\n",
-      "18      2      4  0.209302     0.21\n",
-      "19      2      5  0.159649     0.14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#5 Shingle used from the lap\n",
     "def shingle(text, k: int) -> set:\n",
@@ -194,7 +147,81 @@
     "minhash_arr = get_minhash_arr(num_hashes, vocab)\n",
     "signatures = np.stack([get_signature(minhash_arr, vec) for vec in onehot])\n",
     "\n",
-    "#  similarities\n"
+    "#  similarities\n",
+    "\n",
+    "N = len(big_list)\n",
+    "jac_mat = np.eye(N, dtype=float)  # exact Jaccard similarity matrix\n",
+    "mh_mat  = np.eye(N, dtype=float)  # MinHash similarity matrix\n",
+    "\n",
+    "for i in range(N):\n",
+    "    for j in range(i + 1, N):\n",
+    "        # Exact Jaccard on shingles\n",
+    "        s_jac = jaccard_similarity(shingle_sets[i], shingle_sets[j])\n",
+    "        jac_mat[i, j] = jac_mat[j, i] = s_jac\n",
+    "\n",
+    "        # MinHash-based similarity (fraction of equal signature components)\n",
+    "        s_mh = compute_signature_similarity(signatures[i], signatures[j])\n",
+    "        mh_mat[i, j] = mh_mat[j, i] = s_mh\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "70af7f8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Example shingles (first 3 documents) ===\n",
+      "Doc 0: [' 19', ' an', ' ap', ' co', ' d.', ' da', ' de', ' en', ' fo', ' gl'] ... (249 total shingles)\n",
+      "Doc 1: [' 19', ' a ', ' an', ' ap', ' ba', ' co', ' cr', ' da', ' di', ' e.'] ... (258 total shingles)\n",
+      "Doc 2: [' 19', ' 20', ' ag', ' an', ' at', ' be', ' bo', ' co', ' da', ' fo'] ... (323 total shingles)\n",
+      "\n",
+      "=== Example MinHash signatures (first 3 documents) ===\n",
+      "Doc 0 signature: [ 13  70  37  14 125  45  36  12 174   2] ... (100 total hash values)\n",
+      "Doc 1 signature: [132  32   7  52  25  14  36  12  16  14] ... (100 total hash values)\n",
+      "Doc 2 signature: [54 32  2 63 25 14 36 12 16 56] ... (100 total hash values)\n",
+      "\n",
+      "=== Jaccard similarity matrix (rounded) ===\n",
+      "[[1.    0.176 0.182 ... 0.    0.    0.   ]\n",
+      " [0.176 1.    0.218 ... 0.    0.    0.   ]\n",
+      " [0.182 0.218 1.    ... 0.    0.    0.   ]\n",
+      " ...\n",
+      " [0.    0.    0.    ... 1.    0.    0.   ]\n",
+      " [0.    0.    0.    ... 0.    1.    0.   ]\n",
+      " [0.    0.    0.    ... 0.    0.    1.   ]]\n",
+      "\n",
+      "=== MinHash similarity matrix (rounded) ===\n",
+      "[[1.   0.18 0.19 ... 0.   0.   0.  ]\n",
+      " [0.18 1.   0.23 ... 0.   0.   0.  ]\n",
+      " [0.19 0.23 1.   ... 0.   0.   0.  ]\n",
+      " ...\n",
+      " [0.   0.   0.   ... 1.   1.   1.  ]\n",
+      " [0.   0.   0.   ... 1.   1.   1.  ]\n",
+      " [0.   0.   0.   ... 1.   1.   1.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print shingles\n",
+    "print(\"\\n=== Example shingles (first 3 documents) ===\")\n",
+    "for i, s in enumerate(shingle_sets[:3]):\n",
+    "    print(f\"Doc {i}: {sorted(list(s))[:10]} ... ({len(s)} total shingles)\")\n",
+    "\n",
+    "# Print MinHash signatures\n",
+    "print(\"\\n=== Example MinHash signatures (first 3 documents) ===\")\n",
+    "for i, sig in enumerate(signatures[:3]):\n",
+    "    print(f\"Doc {i} signature: {sig[:10]} ... ({len(sig)} total hash values)\")\n",
+    "\n",
+    "# Print Jaccard & MinHash similarities\n",
+    "print(\"\\n=== Jaccard similarity matrix (rounded) ===\")\n",
+    "print(np.round(jac_mat, 3))\n",
+    "\n",
+    "print(\"\\n=== MinHash similarity matrix (rounded) ===\")\n",
+    "print(np.round(mh_mat, 3))\n"
    ]
   }
  ],
